# MAPITagsScraper.py

./: .gitignore  ReadMe.md  setup.cfg
MAPITagsScraper/: DOMUtils.py  KSEnumValue.py  Source.py  __init__.py  __main__.py  consts.py  mapi_tags.template.ksy  nameNormalizer.py
MAPITagsScraper/sources/: OxProps.py  __init__.py  genTagArray.py  kaitai.py  mfmy_mfoy.py  openchange.py  ptags.py
MAPITagsScraper/utils/: __init__.py  yaml.py
