[metadata]
name = MAPITagsScraper
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/MAPITagsScraper.py
description = Extracts MAPI tags identifiers from MS docs
long_description = file: ReadMe.md
keywords = MAPITagsScraper
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	commonmark @ git+https://github.com/readthedocs/commonmark.py
	recommonmark @ git+https://github.com/readthedocs/recommonmark.git
	docutils
	dom_query @ git+https://gitlab.com/geusebi/dom_query.git
	inflection @ git+https://github.com/jpvanhal/inflection.git

	ruamel.yaml

extras_requires = 
	header = simpleeval @ git+https://github.com/danthedeckie/simpleeval.git

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts =
	MAPITagsScraper = MAPITagsScraper.__main__:CLI.run
